--- a/src/components/Brands/Brands.css
+++ b/src/components/Brands/Brands.css
@@ -1,7 +1,3 @@
-.product-card {
-  position: relative;
-  width: 90%;
-}
-.product-card .brand-card {
+.product-card .brandd-card {
   margin-left: 1% !important;
 }
