--- a/src/components/menu/MenuSection/MenuSection.css
+++ b/src/components/menu/MenuSection/MenuSection.css
@@ -53,8 +53,9 @@
 }
 
 .brand-card img {
+  object-fit: contain !important;
   width: 50%;
-  height: auto;
+  height: 60px;
 }
 
 .swiper-button-next,
@@ -226,7 +227,8 @@
   }
 
   .brand-card img {
-    width: 90%;
+    width: 85%;
+    max-height: 40px;
   }
   .swiper-wrapper {
     padding-left: 10px;
