--- a/src/components/menu/MenuSection/MenuSection.css
+++ b/src/components/menu/MenuSection/MenuSection.css
@@ -17,8 +17,7 @@
   overflow: hidden;
 }
 .brand-card > div > div {
-  padding: 10px;
-  height: 80%;
+  height: 100%;
   margin: auto;
   width: 100%;
 }
@@ -77,7 +76,7 @@
 
 .swiper-button-next:hover,
 .swiper-button-prev:hover {
-  background-color: rgba(0, 0, 0, 0.5) !important;
+  background-color: rgba(209, 209, 209, 0.5) !important;
 }
 
 .tabs-content {
@@ -188,7 +187,6 @@
   font-size: 25px;
   font-weight: 700;
   color: #e44c26bd;
-  font-family: "Readex Pro";
 }
 
 .product-img {
@@ -208,6 +206,7 @@
 @media screen and (max-width: 767px) {
   .menu-section {
     background-color: #00000014;
+    padding: 2%;
   }
   .brand-card {
     width: 100%;
@@ -216,7 +215,7 @@
 
   .brand-cardd {
     height: 100%;
-    width: 50%;
+    width: 100%;
     margin: auto;
     display: flex;
     align-items: center;
@@ -227,8 +226,8 @@
   }
 
   .brand-card img {
-    width: 85%;
-    max-height: 50px;
+    width: 41%;
+    max-height: 69px;
   }
   .swiper-wrapper {
     padding-left: 10px;
@@ -238,9 +237,10 @@
   }
   .swiper-button-next,
   .swiper-button-prev {
-    top: 64% !important;
-    color: #000 !important;
-    background-color: rgba(128, 122, 122, 0.5) !important;
+    top: 55% !important;
+    color: #655353 !important;
+    background-color: rgb(189 189 189 / 50%) !important;
+    padding: 20px;
     width: 20px !important;
     height: 20px !important;
   }
@@ -303,7 +303,6 @@
     font-size: 0.7rem;
     margin-bottom: 10px;
     margin-top: 10px;
-    font-family: "Readex Pro";
   }
 
   .pr-card p {
@@ -322,7 +321,6 @@
     font-size: 1.5rem;
     font-weight: 600;
     color: #e44c26b2;
-    font-family: "Readex Pro";
   }
 
   .center-img {
