--- a/src/components/HomePage/Gallery/Gallery.css
+++ b/src/components/HomePage/Gallery/Gallery.css
@@ -11,7 +11,7 @@
 .Gallery .content h1 {
   font-size: 40px;
   color: #eb2629;
-  font-family: "Sniglet";
+  font-family: "Roboto", sans-serif;
   text-transform: uppercase;
 }
 
@@ -19,7 +19,7 @@
   width: 30%;
   color: #6d6d6d;
   font-size: 80px;
-  font-family: "Luckiest Guy", cursive;
+  font-family: "Roboto", sans-serif;
   padding-top: 50px;
 }
 @media screen and (max-width: 640px) {
