--- a/src/components/HomePage/Services/Service.css
+++ b/src/components/HomePage/Services/Service.css
@@ -8,7 +8,7 @@
 .services h1 {
   font-size: 40px;
   color: #eb2629;
-  font-family: "Sniglet";
+  font-family: "Roboto", sans-serif;
 }
 .services h1 {
   color: #858585;
