--- a/src/components/ulity/SwitchLang.css
+++ b/src/components/ulity/SwitchLang.css
@@ -8,7 +8,7 @@
   height: 0px;
   line-height: 0px;
   text-align: center;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 600;
   color: rgb(87, 87, 87);
 }
