--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,13 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500;700;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600&family=Readex+Pro:wght@400;500;600;700&display=swap');
-
-
-*{
-      padding: 0;
-      margin: 0;
-      font-family: 'Montserrat', sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600&family=Readex+Pro:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Pacifico&family=REM:ital,wght@0,100..900;1,100..900&display=swap");
+* {
+  padding: 0;
+  margin: 0;
+  font-family: "Comfortaa", sans-serif;
 }
- 
 
-.container{
-      max-width: 1500px !important;
+.container {
+  max-width: 1300px !important;
+  margin: auto !important;
 }
