--- a/src/components/HomePage/Header/Mheader.css
+++ b/src/components/HomePage/Header/Mheader.css
@@ -2,13 +2,14 @@
 
 .mheader {
   width: 100%;
-  height: 110px;
-  line-height: 80px;
+  height: 73px;
+  line-height: 69px;
   z-index: 999;
+  font-size: 12px;
+  font-weight: 600;
   position: fixed;
   top: 0;
   background-color: #fff;
-  padding: 10px;
 }
 .mheader-navigation {
   display: flex;
@@ -21,7 +22,7 @@
   display: none !important;
 } */
 .mheader-logo img {
-  width: 210px;
+  width: 105px;
   object-fit: contain;
 }
 .mheader-nav__list {
